Fixed the issue where images were overflowing on mobile devices. (#941)

--- a/src/routes/entry/[...slug]/page.css
+++ b/src/routes/entry/[...slug]/page.css
@@ -1,4 +1,5 @@
 .entry-body img {
+	width: 100%;
 	max-width: 1000px;
 	margin: auto;
 	display: block;
